[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/tip2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Stages/Scripts/HairEquations.gd" type="Script" id=2]
[ext_resource path="res://Assets/buttons/Disabled-OK.png" type="Texture" id=3]
[ext_resource path="res://Assets/buttons/Hover-OK.png" type="Texture" id=4]
[ext_resource path="res://Assets/buttons/OK.png" type="Texture" id=5]
[ext_resource path="res://Assets/buttons/Clicked-OK.png" type="Texture" id=6]
[ext_resource path="res://Assets/buttons/Clicked-Play.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Stages/Scripts/HairEquations_node.gd" type="Script" id=8]
[ext_resource path="res://Scenes/callables/Scripts/Popup_message.gd" type="Script" id=9]
[ext_resource path="res://Assets/Pixellari.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/buttons/Hover-Play.png" type="Texture" id=11]
[ext_resource path="res://Assets/buttons/Disabled-Play.png" type="Texture" id=12]
[ext_resource path="res://Assets/buttons/Play.png" type="Texture" id=13]

[sub_resource type="StreamTexture" id=5]
flags = 4

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=30]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=27]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=28]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=29]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=26]
size = 50
outline_size = 5
outline_color = Color( 0, 0.294118, 0.392157, 1 )
extra_spacing_char = 50
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "popup"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="StyleBoxTexture" id=42]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=43]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=44]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 64, 64 )

[sub_resource type="StyleBoxTexture" id=45]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="HairEquations" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.1, 0.1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="HairEquations"]
margin_right = 800.0
margin_bottom = 576.0

[node name="Sprite" type="Sprite" parent="HairEquations"]
position = Vector2( 618, 214 )
texture = SubResource( 5 )

[node name="Result" type="Label" parent="HairEquations"]
margin_left = 90.0
margin_top = 410.0
margin_right = 250.0
margin_bottom = 441.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "The area is:"

[node name="result_answer" type="LineEdit" parent="HairEquations/Result"]
margin_left = -30.0
margin_top = 50.0001
margin_right = 83.0
margin_bottom = 88.0001
custom_fonts/font = SubResource( 9 )
align = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
placeholder_text = "answer here"
placeholder_alpha = 0.5

[node name="WrongResult" type="Panel" parent="HairEquations/Result/result_answer"]
visible = false
show_behind_parent = true
margin_left = -2.0
margin_top = -3.0
margin_right = 116.0
margin_bottom = 40.0
mouse_filter = 2
custom_styles/panel = SubResource( 10 )

[node name="unit_answer" type="LineEdit" parent="HairEquations/Result"]
margin_left = 100.0
margin_top = 50.0001
margin_right = 193.0
margin_bottom = 88.0001
custom_fonts/font = SubResource( 9 )
align = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
selecting_enabled = false
placeholder_text = "Select unit"
placeholder_alpha = 0.5

[node name="WrongUnit" type="Panel" parent="HairEquations/Result/unit_answer"]
visible = false
show_behind_parent = true
margin_left = -3.0
margin_top = -3.0
margin_right = 95.0
margin_bottom = 40.0
mouse_filter = 2
custom_styles/panel = SubResource( 10 )

[node name="Check Amswer" type="Button" parent="HairEquations/Result"]
margin_left = 60.0
margin_top = 94.0001
margin_right = 92.0
margin_bottom = 126.0
rect_scale = Vector2( 2, 2 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 30 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )

[node name="Numbers" type="GridContainer" parent="HairEquations"]
margin_left = 350.0
margin_top = 450.0
margin_right = 616.0
margin_bottom = 554.0
columns = 5

[node name="1" type="Button" parent="HairEquations/Numbers"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "1"

[node name="2" type="Button" parent="HairEquations/Numbers"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "2"

[node name="3" type="Button" parent="HairEquations/Numbers"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "3"

[node name="4" type="Button" parent="HairEquations/Numbers"]
margin_left = 162.0
margin_right = 212.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "4"

[node name="5" type="Button" parent="HairEquations/Numbers"]
margin_left = 216.0
margin_right = 266.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "5"

[node name="6" type="Button" parent="HairEquations/Numbers"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "6"

[node name="7" type="Button" parent="HairEquations/Numbers"]
margin_left = 54.0
margin_top = 54.0
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "7"

[node name="8" type="Button" parent="HairEquations/Numbers"]
margin_left = 108.0
margin_top = 54.0
margin_right = 158.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "8"

[node name="9" type="Button" parent="HairEquations/Numbers"]
margin_left = 162.0
margin_top = 54.0
margin_right = 212.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "9"

[node name="0" type="Button" parent="HairEquations/Numbers"]
margin_left = 216.0
margin_top = 54.0
margin_right = 266.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 8 )
text = "0"

[node name="Units" type="GridContainer" parent="HairEquations"]
margin_left = 694.0
margin_top = 450.0
margin_right = 744.0
margin_bottom = 554.0

[node name="cm" type="Button" parent="HairEquations/Units"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 27 )
text = "cm²"

[node name="inch" type="Button" parent="HairEquations/Units"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 28 )
text = "in²"

[node name="backspace" type="Button" parent="HairEquations"]
margin_left = 626.0
margin_top = 480.0
margin_right = 676.0
margin_bottom = 530.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = SubResource( 29 )
text = "<--"

[node name="FinalTimer" type="Timer" parent="HairEquations"]
wait_time = 4.0
one_shot = true

[node name="Helper" type="Panel" parent="HairEquations"]
visible = false
margin_left = 800.0
margin_right = 1025.0
margin_bottom = 576.0

[node name="ColorRect" type="ColorRect" parent="HairEquations/Helper"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tip2" type="Sprite" parent="HairEquations/Helper"]
position = Vector2( 110, 290 )
texture = ExtResource( 1 )

[node name="Popup_message" type="Label" parent="HairEquations"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 70.0
margin_top = 260.0
margin_right = 718.0
margin_bottom = 309.0
custom_fonts/font = SubResource( 26 )
text = "EXCELENTE"
script = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="HairEquations/Popup_message"]
anims/RESET = SubResource( 24 )
anims/popup = SubResource( 25 )

[node name="Help" type="Button" parent="HairEquations"]
margin_left = 740.0
margin_top = 10.0
margin_right = 790.0
margin_bottom = 60.0
rect_min_size = Vector2( 50, 50 )
custom_styles/hover = SubResource( 42 )
custom_styles/pressed = SubResource( 43 )
custom_styles/disabled = SubResource( 44 )
custom_styles/normal = SubResource( 45 )

[connection signal="pressed" from="HairEquations/Result/Check Amswer" to="HairEquations" method="_on_Check_Amswer_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/1" to="HairEquations" method="_on_1_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/2" to="HairEquations" method="_on_2_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/3" to="HairEquations" method="_on_3_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/4" to="HairEquations" method="_on_4_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/5" to="HairEquations" method="_on_5_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/6" to="HairEquations" method="_on_6_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/7" to="HairEquations" method="_on_7_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/8" to="HairEquations" method="_on_8_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/9" to="HairEquations" method="_on_9_pressed"]
[connection signal="pressed" from="HairEquations/Numbers/0" to="HairEquations" method="_on_0_pressed"]
[connection signal="pressed" from="HairEquations/Units/cm" to="HairEquations" method="_on_cm_pressed"]
[connection signal="pressed" from="HairEquations/Units/inch" to="HairEquations" method="_on_inch_pressed"]
[connection signal="pressed" from="HairEquations/backspace" to="HairEquations" method="_on_backspace_pressed"]
[connection signal="timeout" from="HairEquations/FinalTimer" to="HairEquations" method="_on_FinalTimer_timeout"]
[connection signal="pressed" from="HairEquations/Help" to="HairEquations" method="_on_Help_pressed"]
